* 2014-05-13 - thorben.betten@open-xchange.com

 - Fix for bug 32226: Do not specify any cache-controlling HTTP header for "file" HTTP-API module

* 2014-05-12 - thorben.betten@open-xchange.com

 - Fix for bug 30843: Introduced properties for IMAP, POP3, and SMTP to specify the SSL cipher suites that will be enabled for SSL connections
 - Fix for bug 32466: Ignore transport credentials on primary mail account update

* 2014-05-05 - thorben.betten@open-xchange.com

 - Fix for bug 32296: Do not use proxy authentication for external mail accounts

* 2014-05-02 - marcus.klein@open-xchange.com

 - Fix for bug 32044: Update the reminder's folderID for all accessing users, if there are no participants. Check additionally permissions
   on the destination folder for all reminder.

* 2014-04-30 - martin.schneider@open-xchange.com

 - Fix for bug 32036: Use 'transport_auth' for setting SMTP credentials usage. 

* 2014-04-29 - thorben.betten@open-xchange.com

 - Fix for bug 32239: Filter associated account's address from recipient list

* 2014-04-25 - thorben.betten@open-xchange.com

 - Fix for bug 31684: Prefer look-up by user identifier over look-up by object/folder identifier pair

* 2014-04-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 32076: Process images of imported contacts in a serialized way
  
* 2014-04-10 - marc.arens@open-xchange.com

 - Fix for bug 31942: Fix for unconsumed request remainders and configure that we want to accept payloads for methods where a payload is currently undefined but not forbidden.
 
* 2014-04-07 - tobias.friedrich@open-xchange.com

 - Fix for bug 31685: Added displayable exception message for IFO-1700

* 2014-04-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 31912: Don't apply personal reminder setting for appointments in shared folders  

* 2014-04-09 - thorben.betten@open-xchange.com

 - Fix for bug 31962: Fixed request watcher runs

* 2014-04-02 - ioannis.chouklis@open-xchange.com
